tests/bad/aritmetic_operator_with_non_int_type2.mil
function main () {
	a = false + true;
}